--- a/data/find-datasets.ipynb
+++ b/data/find-datasets.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32;20m[2025-06-19 10:15:53]\u001b[37;20m | \u001b[0mFound 6270 datasets on OpenML\n"
+      "\u001b[32;20m[2025-06-19 14:29:41]\u001b[37;20m | \u001b[0mFound 6270 datasets on OpenML\n"
      ]
     }
    ],
@@ -38,7 +38,7 @@
     "from src.constants import *\n",
     "\n",
     "datasets = openml.datasets.list_datasets(output_format='dataframe')\n",
-    "log(f\"Found {len(datasets)} datasets on OpenML\")"
+    "log(f'Found {len(datasets)} datasets on OpenML')"
    ]
   },
   {
@@ -76,10 +76,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32;20m[2025-06-19 10:15:53]\u001b[37;20m | \u001b[0m1489 active datasets with numeric features, no missing values, and no symbolic features\n",
-      "\u001b[32;20m[2025-06-19 10:15:53]\u001b[37;20m | \u001b[0m89 datasets with 8-25 numerical features and 500-1500 instances\n",
-      "\u001b[32;20m[2025-06-19 10:15:53]\u001b[37;20m | \u001b[0m72 datasets after removing duplicates\n",
-      "\u001b[32;20m[2025-06-19 10:15:54]\u001b[37;20m | \u001b[0m70 datasets after removing sparse datasets\n"
+      "\u001b[32;20m[2025-06-19 14:29:41]\u001b[37;20m | \u001b[0m1489 active datasets with numeric features, no missing values, and no symbolic features\n",
+      "\u001b[32;20m[2025-06-19 14:29:41]\u001b[37;20m | \u001b[0m89 datasets with 8-25 numerical features and 500-1500 instances\n",
+      "\u001b[32;20m[2025-06-19 14:29:41]\u001b[37;20m | \u001b[0m72 datasets after removing duplicates\n",
+      "\u001b[32;20m[2025-06-19 14:29:42]\u001b[37;20m | \u001b[0m69 datasets after removing sparse datasets\n"
      ]
     },
     {
@@ -141,7 +141,6 @@
        "| 46168 | grace                                                |                1000 |                  8 |\n",
        "| 42999 | hungarian-chickenpox                                 |                 522 |                 21 |\n",
        "| 41943 | ilpd-numeric                                         |                 583 |                 11 |\n",
-       "| 46761 | mental_health_detection                              |                 540 |                 16 |\n",
        "| 43127 | mytestdataset                                        |                 992 |                 16 |\n",
        "|   547 | no2                                                  |                 500 |                  8 |\n",
        "|   522 | pm10                                                 |                 500 |                  8 |\n",
@@ -172,7 +171,7 @@
     "    (datasets['NumberOfSymbolicFeatures'] == 0) &\n",
     "    (datasets['status'] == 'active')\n",
     "]\n",
-    "log(f\"{len(datasets)} active datasets with numeric features, no missing values, and no symbolic features\")\n",
+    "log(f'{len(datasets)} active datasets with numeric features, no missing values, and no symbolic features')\n",
     "\n",
     "datasets = datasets[\n",
     "    (datasets['NumberOfNumericFeatures'] >= MIN_NUM_FEATURES) &\n",
@@ -180,10 +179,10 @@
     "    (datasets['NumberOfInstances'] >= MIN_SAMPLES) &\n",
     "    (datasets['NumberOfInstances'] <= MAX_SAMPLES)\n",
     "]\n",
-    "log(f\"{len(datasets)} datasets with {MIN_NUM_FEATURES}-{MAX_NUM_FEATURES} numerical features and {MIN_SAMPLES}-{MAX_SAMPLES} instances\")\n",
+    "log(f'{len(datasets)} datasets with {MIN_NUM_FEATURES}-{MAX_NUM_FEATURES} numerical features and {MIN_SAMPLES}-{MAX_SAMPLES} instances')\n",
     "\n",
     "datasets = datasets.sort_values(by=['name', 'version'], ascending=[True, False]).drop_duplicates(subset='name', keep='first')\n",
-    "log(f\"{len(datasets)} datasets after removing duplicates\")\n",
+    "log(f'{len(datasets)} datasets after removing duplicates')\n",
     "        \n",
     "sparse = []\n",
     "for did in datasets['did']:\n",
@@ -192,7 +191,7 @@
     "    except Exception as e:\n",
     "        sparse.append(did)\n",
     "datasets = datasets[~datasets['did'].isin(sparse)]\n",
-    "log(f\"{len(datasets)} datasets after removing sparse datasets\")\n",
+    "log(f'{len(datasets)} datasets after removing sparse datasets')\n",
     "\n",
     "table([[row[k] for k in DATASET_KEYS] for _, row in datasets.iterrows()], DATASET_KEYS)"
    ]
@@ -230,10 +229,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32;20m[2025-06-19 10:15:54]\u001b[37;20m | \u001b[0m52 datasets after removing datasets with non-numeric features\n",
-      "\u001b[32;20m[2025-06-19 10:15:54]\u001b[37;20m | \u001b[0m23 datasets after removing datasets with categorical features\n",
-      "\u001b[32;20m[2025-06-19 10:15:54]\u001b[37;20m | \u001b[0m18 datasets after removing duplicates\n",
-      "\u001b[32;20m[2025-06-19 10:15:54]\u001b[37;20m | \u001b[0m8 datasets after removing Friedman datasets\n"
+      "\u001b[32;20m[2025-06-19 14:29:42]\u001b[37;20m | \u001b[0m51 datasets after removing datasets with non-numeric features\n",
+      "\u001b[32;20m[2025-06-19 14:29:42]\u001b[37;20m | \u001b[0m23 datasets after removing datasets with categorical features\n",
+      "\u001b[32;20m[2025-06-19 14:29:42]\u001b[37;20m | \u001b[0m18 datasets after removing duplicates\n",
+      "\u001b[32;20m[2025-06-19 14:29:42]\u001b[37;20m | \u001b[0m8 datasets after removing Friedman datasets\n"
      ]
     },
     {
@@ -262,24 +261,24 @@
     "non_numeric = [43440, 43807, 44203, 43699, 43581, 46585, 47001, 42351,\n",
     "44962, 46587, 46604, 43127, 46589, 44029, 43540, 46815, 43563, 46731]\n",
     "datasets = datasets[~datasets['did'].isin(non_numeric)]\n",
-    "log(f\"{len(datasets)} datasets after removing datasets with non-numeric features\")\n",
+    "log(f'{len(datasets)} datasets after removing datasets with non-numeric features')\n",
     "\n",
     "categorical = [43465, 43701, 46416, 43338, 43808, 43682, 43588, 43403,\n",
     "1028, 44994, 45054, 46555, 46532, 41553, 41943, 46761, 43582, 46356, 46356,\n",
     "42438, 42464, 44960, 46168, 547, 522, 46295, 42437, 42441, 42444, 42445]\n",
     "datasets = datasets[~datasets['did'].isin(categorical)]\n",
-    "log(f\"{len(datasets)} datasets after removing datasets with categorical features\")\n",
+    "log(f'{len(datasets)} datasets after removing datasets with categorical features')\n",
     "\n",
     "duplicates = [\n",
     "    43448, 46917, # Keep: 4353\n",
     "    46254, 43483, 46572, # Keep: 43384\n",
     "]\n",
     "datasets = datasets[~datasets['did'].isin(duplicates)]\n",
-    "log(f\"{len(datasets)} datasets after removing duplicates\")\n",
+    "log(f'{len(datasets)} datasets after removing duplicates')\n",
     "\n",
     "friedman = [595, 609, 654, 649, 593, 612, 641, 631, 606, 599, 627, 597, 608, 628, 646, 617, 623, 604]\n",
     "datasets = datasets[~datasets['did'].isin(friedman)]\n",
-    "log(f\"{len(datasets)} datasets after removing Friedman datasets\")\n",
+    "log(f'{len(datasets)} datasets after removing Friedman datasets')\n",
     "\n",
     "table([[row[k] for k in DATASET_KEYS] for _, row in datasets.iterrows()], DATASET_KEYS)"
    ]
