--- a/notebooks/find-datasets.ipynb
+++ b/notebooks/find-datasets.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32;20m[2025-06-19 14:29:41]\u001b[37;20m | \u001b[0mFound 6270 datasets on OpenML\n"
+      "\u001b[32;20m[2025-07-08 10:26:21]\u001b[37;20m | \u001b[0mFound 6271 datasets on OpenML\n"
      ]
     }
    ],
@@ -76,10 +76,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32;20m[2025-06-19 14:29:41]\u001b[37;20m | \u001b[0m1489 active datasets with numeric features, no missing values, and no symbolic features\n",
-      "\u001b[32;20m[2025-06-19 14:29:41]\u001b[37;20m | \u001b[0m89 datasets with 8-25 numerical features and 500-1500 instances\n",
-      "\u001b[32;20m[2025-06-19 14:29:41]\u001b[37;20m | \u001b[0m72 datasets after removing duplicates\n",
-      "\u001b[32;20m[2025-06-19 14:29:42]\u001b[37;20m | \u001b[0m69 datasets after removing sparse datasets\n"
+      "\u001b[32;20m[2025-07-08 10:26:21]\u001b[37;20m | \u001b[0m1490 active datasets with numeric features, no missing values, and no symbolic features\n",
+      "\u001b[32;20m[2025-07-08 10:26:21]\u001b[37;20m | \u001b[0m89 datasets with 8-25 numerical features and 500-1500 instances\n",
+      "\u001b[32;20m[2025-07-08 10:26:21]\u001b[37;20m | \u001b[0m72 datasets after removing duplicates\n",
+      "\u001b[32;20m[2025-07-08 10:26:22]\u001b[37;20m | \u001b[0m69 datasets after removing unloadable datasets\n"
      ]
     },
     {
@@ -184,14 +184,14 @@
     "datasets = datasets.sort_values(by=['name', 'version'], ascending=[True, False]).drop_duplicates(subset='name', keep='first')\n",
     "log(f'{len(datasets)} datasets after removing duplicates')\n",
     "        \n",
-    "sparse = []\n",
+    "unloadable = []\n",
     "for did in datasets['did']:\n",
     "    try:\n",
     "        fetch_openml(data_id=did, as_frame=True)\n",
     "    except Exception as e:\n",
-    "        sparse.append(did)\n",
-    "datasets = datasets[~datasets['did'].isin(sparse)]\n",
-    "log(f'{len(datasets)} datasets after removing sparse datasets')\n",
+    "        unloadable.append(did)\n",
+    "datasets = datasets[~datasets['did'].isin(unloadable)]\n",
+    "log(f'{len(datasets)} datasets after removing unloadable datasets')\n",
     "\n",
     "table([[row[k] for k in DATASET_KEYS] for _, row in datasets.iterrows()], DATASET_KEYS)"
    ]
@@ -229,10 +229,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32;20m[2025-06-19 14:29:42]\u001b[37;20m | \u001b[0m51 datasets after removing datasets with non-numeric features\n",
-      "\u001b[32;20m[2025-06-19 14:29:42]\u001b[37;20m | \u001b[0m23 datasets after removing datasets with categorical features\n",
-      "\u001b[32;20m[2025-06-19 14:29:42]\u001b[37;20m | \u001b[0m18 datasets after removing duplicates\n",
-      "\u001b[32;20m[2025-06-19 14:29:42]\u001b[37;20m | \u001b[0m8 datasets after removing Friedman datasets\n"
+      "\u001b[32;20m[2025-07-08 10:26:22]\u001b[37;20m | \u001b[0m51 datasets after removing datasets with non-numeric features\n",
+      "\u001b[32;20m[2025-07-08 10:26:22]\u001b[37;20m | \u001b[0m23 datasets after removing datasets with categorical features\n",
+      "\u001b[32;20m[2025-07-08 10:26:22]\u001b[37;20m | \u001b[0m18 datasets after removing duplicates\n",
+      "\u001b[32;20m[2025-07-08 10:26:22]\u001b[37;20m | \u001b[0m8 datasets after removing Friedman datasets\n"
      ]
     },
     {
