--- a/notebooks/find-datasets.ipynb
+++ b/notebooks/find-datasets.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32;20m[2025-07-10 17:58:23]\u001b[37;20m | \u001b[0mFound 6271 datasets on OpenML\n"
+      "\u001b[32;20m[2025-09-29 18:26:02]\u001b[37;20m | \u001b[0mFound 6285 datasets on OpenML\n"
      ]
     }
    ],
@@ -76,10 +76,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32;20m[2025-07-10 17:58:23]\u001b[37;20m | \u001b[0m1490 active datasets with numeric features, no missing values, and no symbolic features\n",
-      "\u001b[32;20m[2025-07-10 17:58:23]\u001b[37;20m | \u001b[0m176 datasets with 8-50 numerical features and 500-5000 instances\n",
-      "\u001b[32;20m[2025-07-10 17:58:23]\u001b[37;20m | \u001b[0m151 datasets after removing duplicates\n",
-      "\u001b[32;20m[2025-07-10 17:58:28]\u001b[37;20m | \u001b[0m147 datasets after removing unloadable datasets\n"
+      "\u001b[32;20m[2025-09-29 18:26:02]\u001b[37;20m | \u001b[0m1499 active datasets with numeric features, no missing values, and no symbolic features\n",
+      "\u001b[32;20m[2025-09-29 18:26:02]\u001b[37;20m | \u001b[0m177 datasets with 8-50 numerical features and 500-5000 instances\n",
+      "\u001b[32;20m[2025-09-29 18:26:02]\u001b[37;20m | \u001b[0m152 datasets after removing duplicates\n",
+      "\u001b[32;20m[2025-09-29 18:26:10]\u001b[37;20m | \u001b[0m148 datasets after removing unloadable datasets\n"
      ]
     },
     {
@@ -233,7 +233,8 @@
        "| 46884 | google_qa_question_type_reason_explanation                                                                                   |                4863 |                 40 |\n",
        "| 46917 | concrete_compressive_strength                                                                                                |                1030 |                  9 |\n",
        "| 47001 | QSAR_Bioconcentration_regression                                                                                             |                 779 |                 13 |\n",
-       "| 47012 | sample_parquet_zip                                                                                                           |                1000 |                 31 |"
+       "| 47012 | sample_parquet_zip                                                                                                           |                1000 |                 31 |\n",
+       "| 47038 | 001                                                                                                                          |                1716 |                 25 |"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -299,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "04ee8c95",
    "metadata": {},
    "outputs": [
@@ -307,10 +308,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32;20m[2025-07-10 18:01:21]\u001b[37;20m | \u001b[0m16 datasets after removing datasets with non-numeric features\n",
-      "\u001b[32;20m[2025-07-10 18:01:21]\u001b[37;20m | \u001b[0m16 datasets after removing datasets with categorical features\n",
-      "\u001b[32;20m[2025-07-10 18:01:21]\u001b[37;20m | \u001b[0m16 datasets after removing duplicates\n",
-      "\u001b[32;20m[2025-07-10 18:01:21]\u001b[37;20m | \u001b[0m16 datasets after removing synthetic datasets with low topology\n"
+      "\u001b[32;20m[2025-09-29 18:26:10]\u001b[37;20m | \u001b[0m111 datasets after removing datasets with non-numeric features\n",
+      "\u001b[32;20m[2025-09-29 18:26:10]\u001b[37;20m | \u001b[0m63 datasets after removing datasets with categorical features\n",
+      "\u001b[32;20m[2025-09-29 18:26:10]\u001b[37;20m | \u001b[0m51 datasets after removing duplicates\n",
+      "\u001b[32;20m[2025-09-29 18:26:10]\u001b[37;20m | \u001b[0m16 datasets after removing synthetic datasets with low topology\n"
      ]
     },
     {
@@ -344,9 +345,9 @@
     }
    ],
    "source": [
-    "non_numeric = [42351, 43127, 43323, 43344, 43352, 43386, 43440, 43442, 43540, 43563, 43581, 43696,\n",
-    "               43699, 43795, 43807, 43817, 43894, 44029, 44203, 44212, 44962, 46381, 46551, 46585,\n",
-    "               46587, 46589, 46597, 46604, 46635, 46731, 46735, 46815, 46883, 46884, 47001, 47012]\n",
+    "non_numeric = [42351, 43127, 43323, 43344, 43352, 43386, 43440, 43442, 43540, 43563, 43581, 43696, 43699, \n",
+    "               43795, 43807, 43817, 43894, 44029, 44203, 44212, 44962, 46381, 46551, 46585, 46587, 46589,\n",
+    "               46597, 46604, 46635, 46731, 46735, 46815, 46883, 46884, 47001, 47012, 47038]\n",
     "datasets = datasets[~datasets['did'].isin(non_numeric)]\n",
     "log(f'{len(datasets)} datasets after removing datasets with non-numeric features')\n",
     "\n",
@@ -394,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
